--- a/PORTFOLIO.HTML
+++ b/PORTFOLIO.HTML
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Personal Portfolio - ANURAG</title>
+<title>Personal Portfolio -Your Name</title>
 <style>
   :root {
     --primary-color: #0077b6;
